HTML email temlate with variables

--- a/email_template.html
+++ b/email_template.html
@@ -115,7 +115,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
     <tr>
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:60px 10px 30px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 class="v-font-size" style="margin: 0px; color: #000000; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 22px;"><strong>Your New ESN Google Account is Ready!</strong></h1>
+  <h1 class="v-font-size" style="margin: 0px; color: #000000; line-height: 110%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 18px;"><strong>Your New ESN Google Account is Ready!</strong></h1>
 
       </td>
     </tr>
@@ -128,8 +128,11 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 80px 40px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="line-height: 160%; text-align: center; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 160%; text-align: center;"><strong>ESN Email Address: </strong><{{member-esnEmail}}</p>
-<p style="font-size: 14px; line-height: 160%; text-align: center;"><strong>Single-Use Password:</strong><{{member-password}}</p>
+    <p style="font-size: 14px; line-height: 160%; text-align: center;"><strong>ESN Email Address: </strong></p>
+    <p><?= esnMail ?></p>
+    <br>
+<p style="font-size: 14px; line-height: 160%; text-align: center;"><strong>Single-Use Password: </strong></p>
+    <p><?= esnMailPassword ?></p>
   </div>
 
       </td>
@@ -145,7 +148,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
 <div align="center">
   <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.google.com/url?q=http://shorturl.at/erBX3&source=gmail&ust=1673409326638000&usg=AOvVaw2T7XLkdtY465olXzWy9Pfn" style="height:37px; v-text-anchor:middle; width:186px;" arcsize="13.5%"  stroke="f" fillcolor="#00aeef"><w:anchorlock/><center style="color:#FFFFFF;font-family:'Open Sans',sans-serif;"><![endif]-->  
-    <a href="https://www.google.com/url?q=http://shorturl.at/erBX3&source=gmail&ust=1673409326638000&usg=AOvVaw2T7XLkdtY465olXzWy9Pfn" target="_blank" class="v-button v-size-width" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #00aeef; border-radius: 5px;-webkit-border-radius: 5px; -moz-border-radius: 5px; width:32%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;">
+    <a href="https://accounts.google.com/v3/signin/identifier?dsh=S-519569920%3A1673058075224270&continue=https%3A%2F%2Fmyaccount.google.com%3Futm_source%3Daccount-marketing-page%26utm_medium%3Dgo-to-account-button&service=accountsettings&flowName=GlifWebSignIn&flowEntry=ServiceLogin&ifkv=AeAAQh41PRUWFAh-PHndVRVHImRNmMDYuE9fao_TuFli9qgWzMn0Ch9UNEDVQoSIC8TraaFurGng" target="_blank" class="v-button v-size-width" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #00aeef; border-radius: 5px;-webkit-border-radius: 5px; -moz-border-radius: 5px; width:32%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;">
       <span style="display:block;padding:10px 20px;line-height:120%;"><strong><span style="font-size: 14px; line-height: 16.8px;">Sign In</span></strong></span>
     </a>
   <!--[if mso]></center></v:roundrect><![endif]-->
